<resources>
    <string name="app_name">Stocker</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_order">Orders</string>
    <string name="button_product">Products</string>
    <string name="button_category">Categories</string>
    <string name="button_alert">Alerts</string>
    <string name="title_activity_display_products">Products</string>
    <string name="title_activity_product_categories">Categories</string>
    <string name="title_activity_add_products">Edit Product</string>
    <string name="title_activity_add_category">Edit Category</string>
    <string name="edit_product_title">Enter Title</string>
    <string name="label_title">Title<font color='#FF0000'>*</font>:</string>
    <string name="edit_product_quantity">0</string>
    <string name="edit_product_notes">Edit Product Notes</string>
    <string name="edit_product_price">$0</string>
    <string name="edit_product_barcode">Enter/Scan barcode</string>
    <string name="button_save">Save</string>
    <string name="edit_category_title">Enter Title</string>
    <string name="action_delete">Delete</string>
    <string name="no_products">No products.</string>
    <string name="search_hint">Search Products</string>
    <string name="search_title">Search Products</string>
    <string name="sort_az">Sort A-Z</string>
    <string name="sort_za">Sort Z-A</string>
    <string name="sort_low_price">Sort Lowest Price</string>
    <string name="sort_high_price">Sort Highest Price</string>

</resources>
