<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Title:" />
    <EditText
        android:id="@+id/edit_product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_title" />
    <TextView
        android:text="Barcode"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_width="match_parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_product_barcode"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edit_product_barcode" />


        <Button
            android:text="SCAN"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/scan_barcode"
            android:onClick="scanBarcode"
            android:layout_width="wrap_content" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Quantity:" />
    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_quantity"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Price:" />
    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_price"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Notes:" />
    <EditText
        android:id="@+id/edit_product_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_notes"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Category:" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_product_category"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:onClick="saveProduct"/>
</LinearLayout>
